Adds checkstyle style checks and formats code based on new rules
Formatting changes only, there are no (intentional) functional updates